src/unit_tests/CustCodeGeneration/fail/dispatch-void.cl
class Main inherits IO {
    a : A;
    main() : Int {{
        -- out_string("fuk");
        a.fun();
    }};
};

class A {
    fun() : Int {1};
};